--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "private": true,
   "dependencies": {
     "animate.css": "^3.7.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.0",
+    "mdbreact": "^4.27.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-iframe": "^1.8.0",
+    "react-owl-carousel": "^2.3.1",
     "react-scripts": "3.0.1",
+    "react-slick": "^0.26.1",
+    "react-testimonial": "^1.0.0",
     "react-typing-effect": "^2.0.3",
+    "react-ui-cards": "^2.0.0",
     "reactstrap": "^8.0.0",
+    "slick-carousel": "^1.8.1",
     "vertical-timeline-component-for-react": "^1.0.7",
     "wowjs": "^1.1.3"
   },
