Added all corrections to code but could not take out blank space above about section and could not add the other parts from profile cause google docs is asking that i get permission first

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-testimonial": "^1.0.0",
     "react-typing-effect": "^2.0.3",
     "react-ui-cards": "^2.0.0",
+    "react-vertical-timeline-component": "^3.0.2",
     "reactstrap": "^8.0.0",
     "slick-carousel": "^1.8.1",
     "vertical-timeline-component-for-react": "^1.0.7",
