--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^4.1.0",
     "react-iframe": "^1.8.0",
     "react-owl-carousel": "^2.3.1",
     "react-scripts": "3.0.1",
